--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@types/express": "^4.11.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "ts-node": "^6.0.0"
+    "ts-node": "^6.0.0",
+    "typescript": "^2.8.3"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
