--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "npm": "5.8.0"
   },
   "scripts": {
-    "start": "ts-node ./src/index.ts"
+    "start": "ts-node ./src/index.ts",
+    "postinstall": "npm run typings && npm run compile"
   },
-  "author": "",
+  "author": "Ben Dalton",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.11.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "ts-node": "^6.0.0",
-    "typescript": "^2.8.3"
+    "typescript": "^2.8.3",
+    "tsc": "^1.20150623.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
@@ -26,7 +28,6 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "tsc": "^1.20150623.0",
     "typescript-eslint-parser": "^15.0.0"
   }
 }
