--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
     "npm": "5.8.0"
   },
   "scripts": {
-    "start": "ts-node ./src/index.ts"
+    "start": "ts-node ./src/index.ts",
+    "dev": "nodemon"
   },
   "author": "Ben Dalton",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.11.1",
+    "@types/passport": "^0.4.5",
+    "@types/passport-google-oauth2": "^0.1.2",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "nodemon": "^1.17.3",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
     "ts-node": "^6.0.0",
-    "typescript": "^2.8.3",
-    "tsc": "^1.20150623.0"
+    "tsc": "^1.20150623.0",
+    "typescript": "^2.8.3"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
