--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.11.1",
+    "@types/mongoose": "^5.0.10",
     "@types/passport": "^0.4.5",
     "@types/passport-google-oauth2": "^0.1.2",
     "body-parser": "^1.18.2",
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
+    "mongoose": "^5.0.16",
     "nodemon": "^1.17.3",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
