--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "scripts": {
     "start": "ts-node ./src/index.ts",
-    "dev": "nodemon"
+    "server": "nodemon",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Ben Dalton",
   "license": "ISC",
@@ -19,6 +21,7 @@
     "@types/passport": "^0.4.5",
     "@types/passport-google-oauth2": "^0.1.2",
     "body-parser": "^1.18.2",
+    "concurrently": "^3.6.0",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
     "mongoose": "^5.0.16",
