--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
     "comma-dangle": 1,
     "no-debugger": 0,
     "import/prefer-default-export": 0,
-    "max-len": [1, 80]
+    "max-len": [1, 80],
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
   }
 }
